...
            "state": "translated",
            "value": "多选"
          }
        }
      }
    },
    "大附件": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "大附件"
          }
...
            "state": "translated",
            "value": "已选 %lld 条"
          }
        }
      }
    },
    "已选择": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "已选择"
          }
...
